# python-project-83

./: Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: pylint.yml
page_analyzer/: __init__.py  app.py  repository.py  utils.py  validator.py
page_analyzer/templates/: index.html  layout.html  site.html  sites.html
